@@ -86,3 +86,5 @@ COMPILE_WITHOUT
 #absolute2=@{absolute('filename.js', 'https://www.google.sk')}#
 #absolute3=@{absolute(['default.js', 'home.js'], 'http://localhost:8000')}#
 #d429c9c776604a9e15d04d9bd90dba27e0155965=@{repository.a}+@{repository.b}+@{repository.c}#
+#CONFIGNAME1=@{'%name'}#
+#CONFIGNAME2=@{'%fet'}#
